update handler and DOM

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section id="user-interface">
-        <form id="user-form" class="centered margin-top-bottom">
+        <form id="user-form" class="centered margin-top-bottom custom-width">
             <input class="margin-top-bottom" type="text" name="textInput" placeholder="write something here!">
             <br>
             <button id="saveButton" class="margin-top-bottom">Save</button>
